--- a/style.css
+++ b/style.css
@@ -2,19 +2,62 @@
 	width: 100%;
 	background-color: WhiteSmoke;
 	display: flex;
+	justify-content: center;
+	text-align: center;
+	box-shadow: 3px 3px 3px Black;
+	margin: 1%;
+	padding: 1%;
+	
 	
 }
 .left{
-	width: 50%;
-	border: 2px solid peru;
-	background-color: LightGoldenRodYellow;
+	width: 40%;
+	border: 3px solid White;
+	background-color: WhiteSmoke;
+	justify-content: center;
+	text-align: center;
+	box-shadow: 3px 3px 3px Black;
+	margin: 1%;
+	padding: 1%;
 }
 .right{
 	width: 30%;
-	border: 2px solid peru;
-	background-color: LightGoldenRodYellow;
+	border: 3px solid White;
+	background-color: WhiteSmoke;
+	box-shadow: 3px 3px 3px Black;
+	margin: 1%;
+	padding: 1%;
 }
 img{
 	width: 50%;
-	border: 5px solid DarkRed;
+	border: 2px solid Black;
+	box-shadow: 3px 3px 3px Black;
+	margin: 1%;
+	padding: 1%;
+    border-radius: 50%;
+}
+h1,
+h2
+{
+	font-size: 40px;
+}
+h3
+{
+	 font-size: 30px;
+	 box-shadow: 3px 3px 3px Black;
+}
+@media only screen and (min-width: 320px) and (max-width: 550px) {
+.main{
+	display: flex;
+	flex-wrap: wrap;
+}
+	.left{
+		width: 95%;
+	}
+}
+@media only screen and (max-width: 1024px) {
+	.main{
+		display: flex;
+		flex-direction: colomn;
+	}
 }
