--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 	
 }
 .left{
-	width: 40%;
+	width: 30%;
 	border: 3px solid White;
 	background-color: WhiteSmoke;
 	justify-content: center;
@@ -21,7 +21,7 @@
 	padding: 1%;
 }
 .right{
-	width: 30%;
+	width: 50%;
 	border: 3px solid White;
 	background-color: WhiteSmoke;
 	box-shadow: 3px 3px 3px Black;
@@ -34,18 +34,17 @@ img{
 	box-shadow: 3px 3px 3px Black;
 	margin: 1%;
 	padding: 1%;
-    border-radius: 50%;
+	border-style: double;
 }
 h1,
 h2
 {
-	font-size: 40px;
+	font-size: 20px;
+	box-shadow: 3px 3px 3px Black;
 }
 h3
 {
-	 font-size: 30px;
-	 box-shadow: 3px 3px 3px Black;
-	 text-decoration: line;
+	 font-size: 20px;
 }
 @media only screen and (min-width: 320px) and (max-width: 550px) {
 .main{
